--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -6,11 +6,16 @@
     background: linear-gradient(135deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 
     .login-container {
-        width           : 400px;
-        height          : 100%;
-        margin          : 0 auto;
+        width           : 350px;
         border-radius   : 10px;
         background-color: white;
+        position        : absolute;
+        top             : 0;
+        bottom          : 0;
+        left            : 0;
+        right           : 0;
+        margin          : auto;
+        height          : 500px;
 
         .login-content {
             padding: 10px;
@@ -24,6 +29,17 @@
 
             .login-input {
                 margin: 7px 0;
+
+                .custom-input-password {
+                    position: relative;
+
+                    i {
+                        position: absolute;
+                        right   : 5px;
+                        top     : 10px;
+                        cursor  : pointer;
+                    }
+                }
             }
 
             .btn-login {
