--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -51,3 +51,40 @@
         color           : red !important;
     }
 }
+
+.modla-user-container {
+    .modal-header {
+        button {
+            background: transparent !important;
+            outline   : none;
+            border    : none;
+            color     : white;
+            font-size : 25px;
+        }
+    }
+
+    .modal-user-body {
+        display  : flex;
+        gap      : 15px;
+        flex-wrap: wrap;
+
+        .input-container {
+            display       : flex;
+            flex-direction: column;
+            width         : 49%;
+
+            &.max-width-input {
+                width: 100%;
+            }
+
+            input {
+                border-radius: 3px;
+                height       : 30px;
+                border       : 1px solid gray;
+                outline      : none;
+                padding      : 0 10px;
+            }
+        }
+    }
+
+}
