--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -52,3 +52,109 @@
         }
     }
 }
+
+.home-header-banner {
+    background         : url(../../assets/background.jpg); //top center/cover no-repeat;
+    // padding-top: 40%;
+    height             : 565px;
+    background-repeat  : no-repeat;
+    background-size    : cover;
+    background-position: center;
+    display            : flex;
+    flex-direction     : column;
+
+    .content-up {
+
+        padding-top: 20px;
+        border     : 1px solid red;
+        height     : 50%;
+
+        .title1 {
+            text-align   : center;
+            color        : white;
+            font-size    : 27px;
+            text-shadow  : 1px 1px 1px #333;
+            margin-bottom: 5px;
+            margin-top   : 30px;
+        }
+
+        .title2 {
+            text-align   : center;
+            color        : white;
+            font-size    : 27px;
+            text-shadow  : 1px 1px 1px #333;
+            margin-bottom: 15px;
+        }
+
+        .search {
+            width             : fit-content;
+            display           : flex;
+            justify-content   : center;
+            margin            : 0 auto;
+            align-items       : center;
+            padding           : 10px;
+            // width          :;
+            border-radius     : 30px;
+            background        : #f7d800;
+
+            i {
+                margin: 0 5px;
+            }
+
+            input {
+                height    : 30px;
+                width     : 330px;
+                background: transparent;
+                border    : none;
+                outline   : none;
+            }
+        }
+    }
+
+    .content-down {
+
+        border: 1px solid blue;
+        height: 50%;
+
+        .options {
+            display        : flex;
+            gap            : 50px;
+            justify-content: center;
+
+            .option-child {
+                border    : 1px solid red;
+                width     : 110px;
+                text-align: center;
+
+                .icon-child {
+                    background   : green;
+                    /* width     : fit-content; */
+                    padding      : 10px;
+                    width        : 50px;
+                    height       : 50px;
+                    border-radius: 50%;
+                    /* text-align: center; */
+                    margin       : 0 auto;
+                    background   : white;
+                    box-shadow   : 1px 1px 1px #333;
+
+                    i {
+                        font-size: 25px;
+                        color    : rgb(20, 159, 209);
+                    }
+                }
+
+                .text-child {
+                    font-size  : 17px;
+                    font-weight: bold;
+
+                    &:hover {
+                        color : rgb(20, 159, 209);
+                        cursor: pointer;
+                    }
+                }
+
+            }
+        }
+    }
+}
