--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,7 @@
 .home-header-container {
-    height : 60px;
+    height : 70px;
     width  : 100%;
-    padding: 0 20px;
+    padding: 0 40px;
 
     .home-header-content {
         width  : 100%;
@@ -9,16 +9,18 @@
         display: flex;
 
         .left-content {
-            width      : 25%;
-            border     : 1px solid green;
-            display    : flex;
-            align-items: center;
+            width       : 25%;
+            display     : flex;
+            align-items : center;
+            gap         : 10px;
+            padding-left: 50px;
 
             .header-logo {
-                background: url(../../assets/logo.svg.svg) center center no-repeat;
-                height    : 100%;
-                width     : 100%;
-                cursor    : pointer;
+                //background: url(../../assets/logo.svg.svg) center center no-repeat;
+                height      : auto;
+                width       : 50%;
+                cursor      : pointer;
+                padding-left: 15px;
             }
 
             i {
@@ -30,7 +32,6 @@
 
         .center-content {
             width          : 50%;
-            border         : 1px solid blue;
             display        : flex;
             justify-content: space-between;
             align-items    : center;
@@ -45,18 +46,46 @@
 
         .right-content {
             width          : 25%;
-            border         : 1px solid black;
             display        : flex;
-            justify-content: center;
+            justify-content: flex-end;
             align-items    : center;
+
+            .support {
+                padding-right: 80px;
+                display      : flex;
+                align-items  : center;
+                cursor       : pointer;
+
+                i {
+                    color       : rgb(20, 159, 209);
+                    font-size   : 15px;
+                    margin-right: 10px;
+                }
+            }
+
+            .language-vi {
+                cursor: pointer;
+
+                &.active {
+                    color: orange;
+                }
+            }
+
+            .language-en {
+                margin: 0 10px;
+                cursor: pointer;
+
+                &.active {
+                    color: blue;
+                }
+            }
         }
     }
 }
 
 .home-header-banner {
-    background         : url(../../assets/background.jpg); //top center/cover no-repeat;
-    // padding-top: 40%;
-    height             : 565px;
+    background         : url(../../assets/background.jpg);
+    height             : 600px;
     background-repeat  : no-repeat;
     background-size    : cover;
     background-position: center;
@@ -64,46 +93,44 @@
     flex-direction     : column;
 
     .content-up {
-
-        padding-top: 20px;
-        border     : 1px solid red;
-        height     : 50%;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0.1));
+        padding-top     : 20px;
+        height          : 65%;
 
         .title1 {
             text-align   : center;
             color        : white;
-            font-size    : 27px;
+            font-size    : 35px;
             text-shadow  : 1px 1px 1px #333;
-            margin-bottom: 5px;
+            margin-bottom: 15px;
             margin-top   : 30px;
         }
 
         .title2 {
             text-align   : center;
             color        : white;
-            font-size    : 27px;
+            font-size    : 35px;
             text-shadow  : 1px 1px 1px #333;
-            margin-bottom: 15px;
+            margin-bottom: 25px;
         }
 
         .search {
-            width             : fit-content;
-            display           : flex;
-            justify-content   : center;
-            margin            : 0 auto;
-            align-items       : center;
-            padding           : 10px;
-            // width          :;
-            border-radius     : 30px;
-            background        : #f7d800;
+            width          : fit-content;
+            display        : flex;
+            justify-content: center;
+            margin         : 0 auto;
+            align-items    : center;
+            padding        : 10px;
+            border-radius  : 30px;
+            background     : #f7d800;
 
             i {
                 margin: 0 5px;
             }
 
             input {
-                height    : 30px;
-                width     : 330px;
+                height    : 35px;
+                width     : 450px;
                 background: transparent;
                 border    : none;
                 outline   : none;
@@ -113,8 +140,11 @@
 
     .content-down {
 
-        border: 1px solid blue;
-        height: 50%;
+        height          : 35%;
+        display         : flex;
+        align-items     : flex-end;
+        justify-content : center;
+        background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 1));
 
         .options {
             display        : flex;
@@ -122,21 +152,21 @@
             justify-content: center;
 
             .option-child {
-                border    : 1px solid red;
+
                 width     : 110px;
                 text-align: center;
 
                 .icon-child {
-                    background   : green;
-                    /* width     : fit-content; */
-                    padding      : 10px;
-                    width        : 50px;
-                    height       : 50px;
-                    border-radius: 50%;
-                    /* text-align: center; */
-                    margin       : 0 auto;
-                    background   : white;
-                    box-shadow   : 1px 1px 1px #333;
+                    background     : green;
+                    /* width       : fit-content; */
+                    padding        : 10px;
+                    width          : 50px;
+                    height         : 50px;
+                    border-radius  : 50%;
+                    /* text-align  : center; */
+                    margin         : 0 auto;
+                    background     : white;
+                    box-shadow     : 1px 1px 1px #333;
 
                     i {
                         font-size: 25px;
