--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -64,19 +64,31 @@
             }
 
             .language-vi {
-                cursor: pointer;
+                cursor : pointer;
+                opacity: 0.2;
 
                 &.active {
-                    color: orange;
+                    opacity: 1;
+                    color  : orange;
+                }
+
+                &:hover {
+                    opacity: 1;
                 }
             }
 
             .language-en {
-                margin: 0 10px;
-                cursor: pointer;
+                margin : 0 10px;
+                cursor : pointer;
+                opacity: 0.2;
 
                 &.active {
-                    color: blue;
+                    opacity: 1;
+                    color  : rgb(29, 171, 223);
+                }
+
+                &:hover {
+                    opacity: 1;
                 }
             }
         }
@@ -139,12 +151,12 @@
     }
 
     .content-down {
-
         height          : 35%;
         display         : flex;
         align-items     : flex-end;
         justify-content : center;
         background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 1));
+        padding-bottom  : 10px;
 
         .options {
             display        : flex;
