--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,11 @@
 .home-header-container {
-    height : 70px;
-    width  : 100%;
-    padding: 0 40px;
+    height          : 60px;
+    width           : 100%;
+    padding         : 0 40px;
+    position        : sticky;
+    top             : 0;
+    background-color: white;
+    z-index         : 2000;
 
     .home-header-content {
         width  : 100%;
