--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -73,10 +73,10 @@
                         }
 
                         &.section-doctor {
-                            background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
-                            width           : 120px !important;
-                            height          : 120px !important;
-                            border-radius   : 50%;
+                            //background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
+                            width        : 120px !important;
+                            height       : 120px !important;
+                            border-radius: 50%;
                         }
 
                         &.section-handbook {
