--- a/src/containers/System/Admin/TableManageUser.scss
+++ b/src/containers/System/Admin/TableManageUser.scss
@@ -22,6 +22,6 @@
     padding-top     : 12px;
     padding-bottom  : 12px;
     text-align      : left;
-    background-color: #04AA6D;
+    background-color: #0071ba;
     color           : white;
 }
