--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -81,6 +81,7 @@
                             width        : 120px !important;
                             height       : 120px !important;
                             border-radius: 50%;
+                            cursor       : pointer;
                         }
 
                         &.section-handbook {
