--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -30,6 +30,22 @@
         border          : none;
         border-radius   : 3px;
         padding         : 5px;
+        background-color: orange;
+        color           : black;
+        cursor          : pointer;
+
+        &:hover {
+            opacity: 0.9;
+        }
+    }
+
+    .btn-create {
+        margin-top      : 40px;
+        margin-bottom   : 30px;
+        outline         : none;
+        border          : none;
+        border-radius   : 3px;
+        padding         : 5px;
         background-color: #0b5efeed;
         color           : white;
         cursor          : pointer;
