--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -20,10 +20,22 @@
             border     : 1px solid gray;
             background : #fff8ae;
             font-weight: 600;
+            outline    : none;
+
+            &:hover {
+                opacity   : 0.9;
+                background: #03a9f4;
+                border    : 1px solid purple;
+            }
+
+            &.active {
+                background: #03a9f4;
+            }
         }
     }
 
     .btn-save-schedule {
         margin-top: 20px;
+
     }
 }
