--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,7 +1,55 @@
 .doctor-schedule-container {
+    border-right: 1px solid green;
+    height      : 100%;
+
     .time-table {
         select {
-            text-transform: capitalize;
+            border       : none;
+            border-bottom: 1px solid #999;
+            outline      : none;
+            cursor       : pointer;
+            padding      : 10px 0;
+            color        : #337ab7;
+            font-weight  : 600;
+
+            option {
+                &:hover {
+                    background: #337ab7;
+                }
+            }
+        }
+    }
+
+    .schedule-list {
+        .text-callendar {
+            color : #333;
+            margin: 10px 0;
+
+            span {
+                text-transform: uppercase;
+                margin-left   : 5px;
+            }
+
+        }
+
+        .time-content {
+            display  : flex;
+            flex-wrap: wrap;
+            gap      : 15px;
+
+            button {
+                padding      : 10px 20px;
+                border       : none;
+                outline      : none;
+                background   : #fff04b;
+                border-radius: 3px;
+                font-weight  : 600;
+                min-width    : 120px;
+
+                &:hover {
+                    background: #03a9f4;
+                }
+            }
         }
     }
 }
