--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -49,9 +49,10 @@
     }
 
     .schedule-doctor {
-        margin : 0 100px;
-        display: flex;
-        height : 200px;
+        margin        : 0 100px;
+        display       : flex;
+        min-height    : 200px;
+        padding-bottom: 15px;
 
         .content-schedule {
             width: 50%;
