--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -10,11 +10,14 @@
         //border : 1px solid gray;
 
         .content-left {
-            background   : center center no-repeat;
-            width        : 120px;
-            height       : 120px;
-            border-radius: 50%;
-            margin       : 10px 50px;
+            //background   : center center no-repeat;
+            background-size    : cover;
+            background-repeat  : no-repeat;
+            background-position: center;
+            width              : 120px;
+            height             : 120px;
+            border-radius      : 50%;
+            margin             : 10px 50px;
         }
 
         .content-right {
