update chuyen khoa

--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -65,7 +65,7 @@
                         right              : 10px;
 
                         &.section-specialty {
-                            background-image: url('../../assets/specialty/co-xuong-khop.jpg');
+                            // background-image: url('../../assets/specialty/co-xuong-khop.jpg');
                         }
 
                         &.section-facility {
